<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QR-Scanner</string>

    <string name="title_toolbar_scanning">Scanning</string>

    <string name="text_button_scanning">Scanning</string>
    <string name="text_button_generate">Create</string>
    <string name="text_button_history">History</string>
    <string name="text_button_settings">Settings</string>
</resources>