<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_toolbar_scanning" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <!-- START: MAIN CONTAINER BUTTON -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        <!-- START: SCANNING BUTTON -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/scanning_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/generate_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/scanning_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/white"
            android:text="@string/text_button_scanning"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/scanning_button"
            app:layout_constraintEnd_toEndOf="@+id/scanning_button"
            app:layout_constraintStart_toStartOf="@+id/scanning_button"
            app:layout_constraintTop_toBottomOf="@+id/scanning_button" />
        <!-- END: SCANNING BUTTON -->
        
        <!-- START: GENERATE BUTTON -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/generate_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/history_button"
            app:layout_constraintStart_toEndOf="@+id/scanning_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/generate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/white"
            android:text="@string/text_button_generate"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/generate_button"
            app:layout_constraintEnd_toEndOf="@+id/generate_button"
            app:layout_constraintStart_toStartOf="@+id/generate_button"
            app:layout_constraintTop_toBottomOf="@+id/generate_button"
            app:textAllCaps="false" />
        <!-- END: GENERATE BUTTON -->

        <!-- START: HISTORY BUTTON -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/history_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settings_button"
            app:layout_constraintStart_toEndOf="@+id/generate_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/white"
            android:text="@string/text_button_history"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/history_button"
            app:layout_constraintEnd_toEndOf="@+id/history_button"
            app:layout_constraintStart_toStartOf="@+id/history_button"
            app:layout_constraintTop_toBottomOf="@+id/history_button" />
        <!-- END: HISTORY BUTTON -->

        <!-- START: SETTING BUTTON -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/settings_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/history_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/white"
            android:text="@string/text_button_settings"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/settings_button"
            app:layout_constraintEnd_toEndOf="@+id/settings_button"
            app:layout_constraintStart_toStartOf="@+id/settings_button"
            app:layout_constraintTop_toBottomOf="@+id/settings_button" />
        <!-- END: SETTING BUTTON -->

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- END: MAIN CONTAINER BUTTON -->

</androidx.constraintlayout.widget.ConstraintLayout>